[package]
name = "f0rm47"
description = ""
version = "0.0.0"
homepage = "https://github.com/r3v2d0g/f0rm47"
repository = "https://git.r3vd5u3d.network/~r3v2d0g/f0rm47"
documentation = "https://docs.rs/f0rm47"
keywords = []
categories = []
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"
publish = false

[features]
default = ["thiserror"]
p0w = ["pow"]
sp4r53 = ["sparse"]

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.ed25519]
package = "ed25519-dalek"
version = "1.0"
optional = true

[dependencies.pow]
package = "p0w"
version = "0.2"
optional = true

[dependencies.sparse]
package = "sp4r53"
version = "0.1"
optional = true

[dependencies.thiserror]
version = "1.0"
optional = true
