[package]
name = "f0rm47"
description = ""
version = "0.0.0"
homepage = "https://github.com/r3v2d0g/f0rm47"
repository = "https://git.r3vd5u3d.network/~r3v2d0g/f0rm47"
documentation = "https://docs.rs/f0rm47"
keywords = []
categories = []
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"
publish = false

[features]
default = ["collections", "net"]
collections = ["list", "map", "set", "vec"]
list = []
map = []
net = []
set = []
vec = []
